--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
         <dl class="layui-nav-child">
           <dd><a href="javascript:;">选项1</a></dd>
           <dd><a href="javascript:;">选项2</a></dd>
-          <dd><a href="">跳转</a></dd>
+          <dd><a href="javascript:;">跳转</a></dd>
         </dl>
       </li>
       <li class="layui-nav-item">
