--- a/views/index.html
+++ b/views/index.html
@@ -1,45 +1,87 @@
-<ul class="layui-nav" lay-filter="">
-    <li class="layui-nav-item"><a href="">最新活动</a></li>
-    <li class="layui-nav-item layui-this"><a href="">产品</a></li>
-    <li class="layui-nav-item"><a href="">大数据</a></li>
-    <li class="layui-nav-item">
-      <a href="javascript:;">解决方案</a>
-      <dl class="layui-nav-child"> <!-- 二级菜单 -->
-        <dd><a href="">移动模块</a></dd>
-        <dd><a href="">后台模版</a></dd>
-        <dd><a href="">电商平台</a></dd>
-      </dl>
-    </li>
-    <li class="layui-nav-item"><a href="">社区</a></li>
-  </ul>
-  <ul class="layui-nav layui-nav-tree" lay-filter="test">
-    <!-- 侧边导航: <ul class="layui-nav layui-nav-tree layui-nav-side"> -->
-      <li class="layui-nav-item layui-nav-itemed">
-        <a href="javascript:;">默认展开</a>
-        <dl class="layui-nav-child">
-          <dd><a href="javascript:;">选项1</a></dd>
-          <dd><a href="javascript:;">选项2</a></dd>
-          <dd><a href="javascript:;">跳转</a></dd>
-        </dl>
-      </li>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>layout 后台大布局 - Layui</title>
+  <link rel="stylesheet" href="../src/css/layui.css">
+</head>
+<body class="layui-layout-body">
+<div class="layui-layout layui-layout-admin">
+  <div class="layui-header">
+    <div class="layui-logo">layui 后台布局</div>
+    <!-- 头部区域（可配合layui已有的水平导航） -->
+    <ul class="layui-nav layui-layout-left">
+      <li class="layui-nav-item"><a href="">控制台</a></li>
+      <li class="layui-nav-item"><a href="">商品管理</a></li>
+      <li class="layui-nav-item"><a href="">用户</a></li>
       <li class="layui-nav-item">
-        <a href="javascript:;">解决方案</a>
+        <a href="javascript:;">其它系统</a>
         <dl class="layui-nav-child">
-          <dd><a href="">移动模块</a></dd>
-          <dd><a href="">后台模版</a></dd>
-          <dd><a href="">电商平台</a></dd>
+          <dd><a href="">邮件管理</a></dd>
+          <dd><a href="">消息管理</a></dd>
+          <dd><a href="">授权管理</a></dd>
         </dl>
       </li>
-      <li class="layui-nav-item"><a href="">产品</a></li>
-      <li class="layui-nav-item"><a href="">大数据</a></li>
     </ul>
-
-
-  <script>
-    //注意：导航 依赖 element 模块，否则无法进行功能性操作
-    layui.use('element', function(){
-      var element = layui.element;
-      
-      //…
-    });
-    </script>
+    <ul class="layui-nav layui-layout-right">
+      <li class="layui-nav-item">
+        <a href="javascript:;">
+          <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+          贤心
+        </a>
+        <dl class="layui-nav-child">
+          <dd><a href="">基本资料</a></dd>
+          <dd><a href="">安全设置</a></dd>
+        </dl>
+      </li>
+      <li class="layui-nav-item"><a href="">退了</a></li>
+    </ul>
+  </div>
+  
+  <div class="layui-side layui-bg-black">
+    <div class="layui-side-scroll">
+      <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+      <ul class="layui-nav layui-nav-tree"  lay-filter="test">
+        <li class="layui-nav-item layui-nav-itemed">
+          <a class="" href="javascript:;">所有商品</a>
+          <dl class="layui-nav-child">
+            <dd><a href="javascript:;">列表一</a></dd>
+            <dd><a href="javascript:;">列表二</a></dd>
+            <dd><a href="javascript:;">列表三</a></dd>
+            <dd><a href="">超链接</a></dd>
+          </dl>
+        </li>
+        <li class="layui-nav-item">
+          <a href="javascript:;">解决方案</a>
+          <dl class="layui-nav-child">
+            <dd><a href="javascript:;">列表一</a></dd>
+            <dd><a href="javascript:;">列表二</a></dd>
+            <dd><a href="">超链接</a></dd>
+          </dl>
+        </li>
+        <li class="layui-nav-item"><a href="">云市场</a></li>
+        <li class="layui-nav-item"><a href="">发布商品</a></li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="layui-body">
+    <!-- 内容主体区域 -->
+    <div style="padding: 15px;">内容主体区域</div>
+  </div>
+  
+  <div class="layui-footer">
+    <!-- 底部固定区域 -->
+    © layui.com - 底部固定区域
+  </div>
+</div>
+<script>
+//JavaScript代码区域
+layui.use('element', function(){
+  var element = layui.element;
+  
+});
+</script>
+</body>
+</html>
